tests/unit/default/syntax-error/061-create-table-parens-name-colon-type-default.e.t
---- IN ----
+%table(id:int=42
---- OUT ----
---- ERR ----
syntax: expected `)` after `...(id:int=42` instead of EOL at position 17 - at line 1
---- EXIT ----
1
